--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A javascript version of magoEat backend application",
   "main": "index.js",
   "scripts": {
+    "dev" : "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "mongoose-unique-validator": "^2.0.3",
+    "nodemon": "^2.0.3",
     "request": "^2.88.2"
   }
 }
