--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A javascript version of magoEat backend application",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pacyL2K19/magoEat-BackendV1#readme",
   "dependencies": {
+    "@react-native-community/netinfo": "^5.8.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
