--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.3",
     "request": "^2.88.2"
+  },
+  "engines": {
+    "node": "13.11.0"
   }
 }
