--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@react-native-community/netinfo": "^5.8.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "twilio": "^3.52.0"
   },
   "engines": {
     "node": "13.11.0"
