--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/pacyL2K19/magoEat-BackendV1#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@react-native-community/netinfo": "^5.8.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
