--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   },
   "engines": {
     "node": "13.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-strongloop": "^2.1.0"
   }
 }
