--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-community/netinfo": "^5.8.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
